--- a/仮開発/style.css
+++ b/仮開発/style.css
@@ -1,5 +1,7 @@
-.dotgothic16-regular {
-  font-family: "DotGothic16", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+
+.fontTest {
+  font-family: DotGothic16, Futura, 'Century Gothic', YuGothic, 'Hiragino Kaku Gothic ProN', 'Yu Gothic', Meiryo, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
